lldb: re-enable mingw32
lldb is not a required at buildtime of rust, It's just an optional dependency like gdb to run some debugging scripts.
Unfortunately, rust fails to build against clang-19 when I tried to  remove lldb from makedepends.

--- a/mingw-w64-lldb/PKGBUILD
+++ b/mingw-w64-lldb/PKGBUILD
@@ -18,7 +18,7 @@ msys2_references=(
   "cpe: cpe:/a:llvm:llvm"
 )
 arch=(any)
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=("spdx:Apache-2.0 WITH LLVM-exception")
 groups=($( (( _clangprefix )) && echo "${MINGW_PACKAGE_PREFIX}-toolchain"))
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
