mesa: clang not required for i686.

--- a/mingw-w64-mesa/PKGBUILD
+++ b/mingw-w64-mesa/PKGBUILD
@@ -4,7 +4,7 @@ _realname=mesa
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=24.2.7
-pkgrel=2
+pkgrel=3
 pkgdesc="Open-source implementation of the OpenGL, Vulkan and OpenCL specifications (mingw-w64)"
 url="https://www.mesa3d.org/"
 msys2_repository_url="https://gitlab.freedesktop.org/mesa/mesa"
@@ -18,12 +18,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
-             "${MINGW_PACKAGE_PREFIX}-clang"
              "${MINGW_PACKAGE_PREFIX}-directx-headers"
              "${MINGW_PACKAGE_PREFIX}-python-mako"
              "${MINGW_PACKAGE_PREFIX}-python-packaging"
              "${MINGW_PACKAGE_PREFIX}-python-yaml"
              $([[ ${CARCH} == i686 ]] || echo \
+               "${MINGW_PACKAGE_PREFIX}-clang" \
                "${MINGW_PACKAGE_PREFIX}-glslang" \
                "${MINGW_PACKAGE_PREFIX}-libclc" \
                "${MINGW_PACKAGE_PREFIX}-libelf" \
