vtk: update to 9.4.0

--- a/mingw-w64-vtk/PKGBUILD
+++ b/mingw-w64-vtk/PKGBUILD
@@ -4,11 +4,11 @@
 _realname=vtk
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=9.3.1
-pkgrel=7
+pkgver=9.4.1
+pkgrel=1
 pkgdesc="A software system for 3D computer graphics, image processing and visualization (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64')
 url="https://www.vtk.org/"
 msys2_repository_url="https://gitlab.kitware.com/vtk/vtk"
 msys2_references=(
@@ -39,6 +39,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-adios2"
+             "${MINGW_PACKAGE_PREFIX}-alembic"
+             $([[ ${MSYSTEM} == MINGW64 ]] || echo "${MINGW_PACKAGE_PREFIX}-anari-sdk")
              "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-cgns"
              "${MINGW_PACKAGE_PREFIX}-cli11"
@@ -73,7 +75,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-utf8cpp"
              )
 optdepends=("${MINGW_PACKAGE_PREFIX}-adios2: I/O ADIOS2"
-            "${MINGW_PACKAGE_PREFIX}-boost: InfovisBoost and InfovisBoostGraphAlgorithms modules"
+            "${MINGW_PACKAGE_PREFIX}-alembic: I/O Alembic"
+            "${MINGW_PACKAGE_PREFIX}-anari-sdk: ANARI Rendering"
+            "${MINGW_PACKAGE_PREFIX}-boost-libs: InfovisBoost and InfovisBoostGraphAlgorithms modules"
             "${MINGW_PACKAGE_PREFIX}-cgns: CGNS Reader"
             "${MINGW_PACKAGE_PREFIX}-ffmpeg: I/O FFMPEG"
             "${MINGW_PACKAGE_PREFIX}-fontconfig: Fontconfig Rendering"
@@ -82,14 +86,14 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-adios2: I/O ADIOS2"
             "${MINGW_PACKAGE_PREFIX}-hdf5: I/O HDF5"
             "${MINGW_PACKAGE_PREFIX}-liblas: I/O LAS"
             "${MINGW_PACKAGE_PREFIX}-libmariadbclient: I/O MySQL/MariaDB"
-            "${MINGW_PACKAGE_PREFIX}-libpng: I/O Images"
+            "${MINGW_PACKAGE_PREFIX}-libpng: I/O PNG Images"
             "${MINGW_PACKAGE_PREFIX}-libogg: I/O OGG and Theora"
             "${MINGW_PACKAGE_PREFIX}-libtheora: I/O OGG and Theora"
             "${MINGW_PACKAGE_PREFIX}-libxml2: I/O Infovis"
             "${MINGW_PACKAGE_PREFIX}-netcdf: I/O netCDF"
             "${MINGW_PACKAGE_PREFIX}-opencascade: I/O OCCT"
             "${MINGW_PACKAGE_PREFIX}-openslide: DomainsMicroscopy"
-            "${MINGW_PACKAGE_PREFIX}-openturns"
+            "${MINGW_PACKAGE_PREFIX}-openturns: OpenTURNS Filter"
             "${MINGW_PACKAGE_PREFIX}-openvdb: I/O OpenVDB"
             "${MINGW_PACKAGE_PREFIX}-openvr: OpenVR Rendering"
             "${MINGW_PACKAGE_PREFIX}-pdal: I/O PDAL"
@@ -101,23 +105,25 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-adios2: I/O ADIOS2"
             "${MINGW_PACKAGE_PREFIX}-qt6-declarative: Qt Qml plugin"
             "${MINGW_PACKAGE_PREFIX}-sqlite3: I/O SQL"
             # "${MINGW_PACKAGE_PREFIX}-tk: TCL bindings, Python Tk widgets"
-            "${MINGW_PACKAGE_PREFIX}-unixodbc")
+            "${MINGW_PACKAGE_PREFIX}-unixodbc: I/O ODBC")
 source=(https://www.vtk.org/files/release/${pkgver%.*}/VTK-${pkgver}.tar.gz
         "001-no-exact-version-for-fast_float.patch"
-        "002-Fix-build-with-gcc-13.patch"
+        "002-fix-build-with-anari-on-mingw.patch"
         "003-fix-build-with-fmt-11.patch"
         "004-accept-future-versions-of-boost-and-occ.patch"
-        "005-opencascade-7.8.patch"::https://gitlab.kitware.com/vtk/vtk/-/merge_requests/11159.patch
         "007-dll-export-some-functions.patch"
-        "008-Fix-vtkm_openmp-exported-target.patch")
-sha256sums=('8354ec084ea0d2dc3d23dbe4243823c4bfc270382d0ce8d658939fd50061cab8'
+        "100-fix-build-vtkm-with-clang-19.patch::https://gitlab.kitware.com/vtk/vtk-m/-/commit/674d370b.patch"
+        "101-fix-build-vtkm-with-clang-19_2.patch::https://gitlab.kitware.com/vtk/vtk-m/-/commit/c805a603.patch"
+        "102-fix-build-vtkm-with-clang-19_3.patch::https://gitlab.kitware.com/vtk/vtk-m/-/commit/48e385af.patch")
+sha256sums=('c253b0c8d002aaf98871c6d0cb76afc4936c301b72358a08d5f3f72ef8bc4529'
             '411b0521fcd2864acae0af20ba6334f69f7c605c9e31996529f64aa749d61065'
-            '20733e97ccf9b0a8e615c75936ce5e4c1db0ac00e9cac30bc359d5912da38990'
-            '7c15ee91447c9199dafaa32eb3cf6afbf16e6306b7879a2dcd9f4ebc95c2e75e'
+            'e5c5894b57b59156a8f130b55cd18e6f510ccd7d9791effc956752a381ddd5e7'
+            'c92343b01c50a93805c7068058416cf010cceba6700e4cc16b3be98598d2295f'
             'a44b3ba4bdc02be4767ff48b8a7fd4206a53756a881421fca99f538b08a7b48c'
-            '761183f537772c8a75e0b41d1587872895c4ecd02c3d4fadcac78ac952cc975d'
-            'a9b9292be90c259f0aa058e3f4a7a08b6218f20e6cb2a71e214acda2d2302a50'
-            '988ef1d43dadf1da157fc69398f545c6d2e82d2dabd7cb830e9fba9ebaba34ac')
+            '6bc0b4a5370e2eaa06241615340a675ee8f3cda89c2e77c4a84ed7cd1a7eddaa'
+            '66b7374a856dd47e65d3313ce9ad72fa470d2d820a40538e5a7f4527ec7c3d3c'
+            'c4b3ce3365d29ec983f3d449f4c8758bf898dccce360599ea4d36d685617c988'
+            '88c36067242d0d14f2dcdb451bbaa6dbf532c270c8fd3255c7ce38d66251c545')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -133,17 +139,21 @@ prepare() {
 
   apply_patch_with_msg \
     001-no-exact-version-for-fast_float.patch \
-    002-Fix-build-with-gcc-13.patch \
+    002-fix-build-with-anari-on-mingw.patch \
     003-fix-build-with-fmt-11.patch \
-    004-accept-future-versions-of-boost-and-occ.patch \
-    005-opencascade-7.8.patch \
-    008-Fix-vtkm_openmp-exported-target.patch
+    004-accept-future-versions-of-boost-and-occ.patch
 
   # Succeed with Clang but failed with GCC!
   if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
     apply_patch_with_msg \
       007-dll-export-some-functions.patch
   fi
+
+  cd ThirdParty/vtkm/vtkvtkm/vtk-m
+  apply_patch_with_msg \
+    100-fix-build-vtkm-with-clang-19.patch \
+    101-fix-build-vtkm-with-clang-19_2.patch \
+    102-fix-build-vtkm-with-clang-19_3.patch
 }
 
 build() {
@@ -157,17 +167,16 @@ build() {
   fi
 
   if [[ ${MSYSTEM} == MINGW64 ]]; then
-    _extra_config+=("-DVTK_MODULE_USE_EXTERNAL_VTK_verdict=OFF")
+    _extra_config+=("-DVTK_MODULE_USE_EXTERNAL_VTK_verdict=OFF" "-DVTK_MODULE_ENABLE_VTK_RenderingAnari=NO")
   fi
 
   CFLAGS+=" ${CPPFLAGS}"
-  CXXFLAGS+=" ${CPPFLAGS} -D_USE_MATH_DEFINES -Wno-attributes -Wno-ignored-attributes -Wno-deprecated-declarations"
+  CXXFLAGS+=" ${CPPFLAGS} -D_USE_MATH_DEFINES -w"
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake \
     -Wno-dev \
     -G"Ninja" \
-    "${_extra_config[@]}" \
     -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
     -DCMAKE_INSTALL_LICENSEDIR=share/licenses/vtk \
     -DBUILD_SHARED_LIBS=ON \
@@ -183,6 +192,7 @@ build() {
     -DVTK_MODULE_USE_EXTERNAL_VTK_exprtk=OFF \
     -DVTK_MODULE_USE_EXTERNAL_VTK_ioss=OFF \
     -DVTK_MODULE_USE_EXTERNAL_VTK_pegtl=OFF \
+    -DVTK_MODULE_USE_EXTERNAL_VTK_token=OFF \
     -DVTK_WRAP_JAVA=OFF \
     -DVTK_WRAP_PYTHON=ON \
     -DVTK_SMP_IMPLEMENTATION_TYPE=TBB \
@@ -192,6 +202,8 @@ build() {
     -DVTK_USE_VIDEO_FOR_WINDOWS=ON \
     -DVTK_ENABLE_OSPRAY=OFF \
     -DVTK_ENABLE_REMOTE_MODULES=OFF \
+    -DVTK_IGNORE_CMAKE_CXX11_CHECKS=ON \
+    "${_extra_config[@]}" \
     ../${_realname}-${pkgver}
 
   ${MINGW_PREFIX}/bin/cmake --build .
@@ -201,7 +213,8 @@ package() {
   cd "${srcdir}/build-${MSYSTEM}"
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/Copyright.txt" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/Copyright.txt \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 
   # Remove third party CMake patching for older versions than ours
   rm -rv "${pkgdir}"${MINGW_PREFIX}/lib/cmake/vtk/patches/3.{1{3,6,9},2{0,2,3}}
