Remove more clang32 packages

--- a/mingw-w64-libmysofa/PKGBUILD
+++ b/mingw-w64-libmysofa/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.3.1
 pkgrel=1
 pkgdesc="Reader for AES SOFA files to get better HRTFs (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/hoene/libmysofa/"
 msys2_references=(
   "cpe: cpe:/a:symonics:libmysofa"
