--- a/mingw-w64-mpg123/PKGBUILD
+++ b/mingw-w64-mpg123/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.32.9
 pkgrel=1
 pkgdesc="A console based real time MPEG Audio Player for Layer 1, 2 and 3 (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.mpg123.com/"
 msys2_references=(
   "cpe: cpe:/a:mpg123:mpg123"
