--- a/mingw-w64-opus/PKGBUILD
+++ b/mingw-w64-opus/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=1.5.2
 pkgrel=1
 pkgdesc="Codec designed for interactive speech and audio transmission over the Internet (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.opus-codec.org/"
 msys2_repository_url="https://github.com/xiph/opus"
 msys2_references=(
