--- a/mingw-w64-flac/PKGBUILD
+++ b/mingw-w64-flac/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.4.3
 pkgrel=2
 pkgdesc="Free Lossless Audio Codec (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://xiph.org/flac/"
 msys2_references=(
   "cpe: cpe:/a:flac_project:flac"
