--- a/mingw-w64-fluidsynth/PKGBUILD
+++ b/mingw-w64-fluidsynth/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.4.0
 pkgrel=1
 pkgdesc="A real-time software synthesizer based on the SoundFont 2 specifications (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.fluidsynth.org/"
 msys2_repository_url='https://github.com/FluidSynth/fluidsynth'
 msys2_references=(
