--- a/mingw-w64-ladspa-sdk/PKGBUILD
+++ b/mingw-w64-ladspa-sdk/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.17
 pkgrel=1
 pkgdesc="Linux Audio Developer's Simple Plugin API (LADSPA) SDK (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: ladspa'
 )
