--- a/mingw-w64-libsndfile/PKGBUILD
+++ b/mingw-w64-libsndfile/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.2.2
 pkgrel=1
 pkgdesc="A C library for reading and writing files containing sampled sound (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://libsndfile.github.io/libsndfile/"
 msys2_references=(
   "cpe: cpe:/a:libsndfile_project:libsndfile"
