--- a/mingw-w64-openal/PKGBUILD
+++ b/mingw-w64-openal/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.23.1
 pkgrel=2
 pkgdesc="OpenAL audio library for use with opengl (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/kcat/openal-soft"
 license=('spdx:GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-libmysofa")
