--- a/mingw-w64-vulkan-headers/PKGBUILD
+++ b/mingw-w64-vulkan-headers/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=1.3.296.0
 pkgrel=1
 pkgdesc='Vulkan header files (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.khronos.org/vulkan/"
 msys2_repository_url="https://github.com/KhronosGroup/Vulkan-Headers"
 license=('spdx:Apache-2.0')
