--- a/mingw-w64-vulkan-loader/PKGBUILD
+++ b/mingw-w64-vulkan-loader/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=1.3.296.0
 pkgrel=1
 pkgdesc='Vulkan Installable Client Driver (ICD) Loader (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.khronos.org/vulkan/"
 msys2_repository_url="https://github.com/KhronosGroup/Vulkan-Loader"
 msys2_references=(
