wasmtime: update to 27.0.0

--- a/mingw-w64-wasmtime/PKGBUILD
+++ b/mingw-w64-wasmtime/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-lib${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
-pkgver=26.0.1
+pkgver=27.0.0
 pkgrel=1
 pkgdesc="A fast and secure runtime for WebAssembly (mingw-w64)"
 arch=('any')
@@ -24,7 +24,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.9+zstd.1.5.5/download"
         "zstd-sys-remove-statik.patch")
-sha256sums=('eddb912bc48e9b6127d9524e21c6dd1cdab7ef843f009eed3c902a02ed472812'
+sha256sums=('7cc18137641857772e5b5c2f1404bbde0f359862e3f1eca5160b20f5740f4f6e'
             '9e16efa8a874a0481a574084d34cc26fdb3b99627480f785888deb6386506656'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
@@ -39,7 +39,7 @@ prepare() {
 zstd-sys = { path = "../zstd-sys-2.0.9+zstd.1.5.5" }
 END
 
-  cargo update -p zstd-sys
+  cargo update -p zstd-sys -p cc
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
@@ -99,6 +99,7 @@ package_wasmtime() {
 package_libwasmtime() {
   pkgdesc+=' (C-API)'
   conflicts=("${MINGW_PACKAGE_PREFIX}-libwasmer")
+  options=('!staticlibs')
 
   DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}"
   install -Dm644 "build-${MSYSTEM}/include/wasmtime/conf.h" \
@@ -106,7 +107,6 @@ package_libwasmtime() {
   install -d "${pkgdir}${MINGW_PREFIX}/bin"
 
   mv "${pkgdir}${MINGW_PREFIX}/lib/wasmtime.dll" "${pkgdir}${MINGW_PREFIX}/bin/wasmtime.dll"
-  rm "${pkgdir}${MINGW_PREFIX}/lib/libwasmtime.a"
 
   install -Dm644 "${_realname}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/lib${_realname}/LICENSE"
 }
