--- a/mingw-w64-fltk/PKGBUILD
+++ b/mingw-w64-fltk/PKGBUILD
@@ -1,13 +1,13 @@
-# Maintainer: Richard Shaw <hobbes1069@gmail.com>
+# Maintainer: Felix Xing (Felixaszx) <felixaszx@outlook.com>
 
 _realname=fltk
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.3.9
-pkgrel=2
+pkgver=1.4.0
+pkgrel=1
 pkgdesc="C++ user interface toolkit (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.fltk.org/"
 license=('spdx:LGPL-2.0-or-later WITH FLTK-exception')
 depends=("${MINGW_PACKAGE_PREFIX}-expat"
@@ -21,18 +21,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-gettext-tools"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("${_realname}-${pkgver}.tar.gz::https://github.com/${_realname}/${_realname}/archive/release-${pkgver}.tar.gz"
-        "0001-cmake-fix-install.patch"
-        "0002-fltk-config-uuid-shared.patch")
-sha256sums=('f30661851a61f1931eaaceb9ef4005584c85cb07fd7ffc38a645172b8e4eb3df'
-            'd6a882f3645f7de96215ca9cc666a1239781d2d03f2f5266b452eed67f577506'
-            'c20691e1a11994d0d7d681751f1812abd5dfeca7550293d1edacb0c88f62a03c')
+source=("${_realname}-${pkgver}.tar.gz::https://github.com/${_realname}/${_realname}/archive/release-${pkgver}.tar.gz")
+sha256sums=('192a48adaa2060da506ba9961485097203f3461b2262b4bd760a25c068ae4af0')
 
 prepare() {
   cd "${srcdir}/${_realname}-release-${pkgver}"
-
-  patch -p1 -i "${srcdir}/0001-cmake-fix-install.patch"
-  patch -p1 -i "${srcdir}/0002-fltk-config-uuid-shared.patch"
 }
 
 build() {
@@ -59,7 +52,7 @@ build() {
     -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
     "${_extra_config[@]}" \
     -DFLTK_BUILD_TEST=OFF \
-    -DOPTION_BUILD_SHARED_LIBS=ON \
+    -DFLTK_BUILD_SHARED_LIBS=ON \
     "../${_realname}-release-${pkgver}"
 
   ${MINGW_PREFIX}/bin/cmake.exe --build ./
@@ -68,13 +61,13 @@ build() {
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake.exe --install ./
+  mv "${pkgdir}${MINGW_PREFIX}/CMake" "${pkgdir}${MINGW_PREFIX}/share/fltk"
+  install -Dm644 "${srcdir}/${_realname}-release-${pkgver}/COPYING" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 
   local PREFIX_WIN=$(cygpath -wm ${MINGW_PREFIX})
   for _f in "${pkgdir}${MINGW_PREFIX}"/share/fltk/*.cmake; do
     sed -e "s|${PREFIX_WIN}|\$\{_IMPORT_PREFIX\}|g" -i ${_f}
   done
   sed -e "s|${PREFIX_WIN}|${MINGW_PREFIX}|g" -i "${pkgdir}${MINGW_PREFIX}/bin/fltk-config"
-
-  install -Dm644 "${srcdir}/${_realname}-release-${pkgver}/COPYING" \
-    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
