update to use syslibs

--- a/mingw-w64-fltk/PKGBUILD
+++ b/mingw-w64-fltk/PKGBUILD
@@ -52,6 +52,9 @@ build() {
     -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
     "${_extra_config[@]}" \
     -DFLTK_BUILD_TEST=OFF \
+    -DFLTK_USE_SYSTEM_LIBJPEG=ON \
+    -DFLTK_USE_SYSTEM_LIBPNG=ON \
+    -DFLTK_USE_SYSTEM_ZLIB=ON \
     -DFLTK_BUILD_SHARED_LIBS=ON \
     "../${_realname}-release-${pkgver}"
 
