qt5: update to 5.15.16

--- a/mingw-w64-qt5-activeqt/PKGBUILD
+++ b/mingw-w64-qt5-activeqt/PKGBUILD
@@ -4,11 +4,11 @@ _realname=qt5-activeqt
 pkgbase="mingw-w64-${_realname}"
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-${_realname}-debug"))
-pkgver=5.15.15
+pkgver=5.15.16
 pkgrel=1
 pkgdesc="Qt5 ActiveQt Module - ActiveX components (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://www.qt.io/'
 msys2_references=(
   "cpe: cpe:/a:qt:qt"
@@ -19,7 +19,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "rsync")
 _pkgfn="${_realname/5-/}-everywhere-opensource-src-${pkgver}"
 source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/$pkgver/submodules/$_pkgfn.tar.xz")
-sha256sums=('80ceb314b6b3bb739b723b36c9011e800512f374da33610679affd1da982a4c8')
+sha256sums=('28926a281fb00ce5a421e6bc9c82404be1ed719fd449cc97e479721ca08b71dc')
 
 build() {
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
