--- a/mingw-w64-qt5-tools/PKGBUILD
+++ b/mingw-w64-qt5-tools/PKGBUILD
@@ -4,7 +4,7 @@ _realname=qt5-tools
 pkgbase="mingw-w64-${_realname}"
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-${_realname}-debug"))
-pkgver=5.15.15
+pkgver=5.15.16
 pkgrel=1
 pkgdesc="A cross-platform application and UI framework (Development Tools, QtHelp) (mingw-w64)"
 arch=('any')
@@ -16,8 +16,9 @@ msys2_references=(
 license=('spdx:LGPL-3.0-only WITH Qt-GPL-exception-1.0 AND GPL-3.0-or-later AND GPL-2.0-or-later AND GFDL-1.3-no-invariants-only')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt5-declarative"
-             "${MINGW_PACKAGE_PREFIX}-qt5-activeqt"
-             "${MINGW_PACKAGE_PREFIX}-clang"
+             $([[ ${CARCH} == i686 ]] || echo \
+               "${MINGW_PACKAGE_PREFIX}-qt5-activeqt" \
+               "${MINGW_PACKAGE_PREFIX}-clang")
              "${MINGW_PACKAGE_PREFIX}-vulkan-headers"
              "rsync")
 _pkgfn="${_realname/5-/}-everywhere-opensource-src-${pkgver}"
@@ -26,7 +27,7 @@ source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/$pkgver/submod
         002-qt5-windeployqt-fixes.patch
         003-ugly-hack-disable-qdoc-build.patch
         004-fix-build-with-gcc-14.patch)
-sha256sums=('71946704c6bd6c925910288b97dfcc2e357d4a28e22c8651a5813aae4f238028'
+sha256sums=('1cab11887faca54af59f4995ee435c9ad98d194e9e6889c846692c8b6815fc1c'
             'aff15370d18498ee1cc73f027b3fc76cc899b3cd1f79c3ed3bbda50b927dec33'
             '5009ef5c9812f6f6ba6d69d6b2a90b5caa43cf0ef46bf36ac507c672e697e5a1'
             '1927c71175f758914abc485506bb162f3eac5e0816a00be66a78562b168095f0'
@@ -68,9 +69,11 @@ check() {
 
 package_qt5-tools() {
   depends=("${MINGW_PACKAGE_PREFIX}-qt5-base")
-  optdepends=("${MINGW_PACKAGE_PREFIX}-clang-libs"
-              "${MINGW_PACKAGE_PREFIX}-qt5-activeqt")
-  groups=($([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-qt5"))
+  if [[ ${CARCH} != i686 ]]; then
+    optdepends=("${MINGW_PACKAGE_PREFIX}-clang-libs"
+                "${MINGW_PACKAGE_PREFIX}-qt5-activeqt")
+    groups=("${MINGW_PACKAGE_PREFIX}-qt5")
+  fi
 
   cd build-${MSYSTEM}
 
