--- a/mingw-w64-qt5-connectivity/PKGBUILD
+++ b/mingw-w64-qt5-connectivity/PKGBUILD
@@ -4,8 +4,7 @@ _realname=qt5-connectivity
 pkgbase="mingw-w64-${_realname}"
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-debug")
-_qtver=5.15.15
-pkgver=${_qtver}+kde+r3
+pkgver=5.15.16
 pkgrel=1
 pkgdesc="Provides access to Bluetooth hardware (mingw-w64)"
 arch=('any')
@@ -17,29 +16,34 @@ msys2_references=(
 license=('spdx:LGPL-3.0-only WITH Qt-GPL-exception-1.0 AND GPL-3.0-or-later AND GPL-2.0-or-later AND GFDL-1.3-no-invariants-only')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qt5-declarative"
-             "git"
              "rsync")
-_pkgfn="${_realname/5-/}"
-_commit=f2a9c5d1235d88cc26f2cfa348a037b65e31a5ae
-source=(git+https://invent.kde.org/qt/qt/$_pkgfn#commit=$_commit
-        0001-qtconnectivity-add-callback-attribute.patch)
-sha256sums=('37c90538f6c9bf560af6029314b58b53a7782d00015be3e4aef058f2fcd67c09'
-            'a2eeaec6d1f05519f754b7baed7d08c24221b24ae282ff711c35a84fab68ff6c')
+_pkgfn="${_realname/5-/}-everywhere-opensource-src-${pkgver}"
+source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/$pkgver/submodules/$_pkgfn.tar.xz"
+        0001-qtconnectivity-add-callback-attribute.patch
+        0002-sdpscanner_fix_format_strings_for_u_int64_t.patch::https://invent.kde.org/qt/qt/qtconnectivity/-/commit/c8a0f0b1.patch)
+sha256sums=('a993466cf114903b2384a42163ebc6e80472fb62b691b0677ed11d68e5e6d86c'
+            'a2eeaec6d1f05519f754b7baed7d08c24221b24ae282ff711c35a84fab68ff6c'
+            'b06e23edd11d15ac78678a4445a248bfb60116db30834ea946bcd238c31d6923')
 
-pkgver() {
-  cd $_pkgfn
-  echo "${_qtver}+kde+r"`git rev-list --count v${_qtver}-lts-lgpl..$_commit`
+apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying ${_patch}"
+    patch -Nbp1 -i "${srcdir}/${_patch}"
+  done
 }
 
 prepare() {
-  cd $_pkgfn
-  git apply "${srcdir}/0001-qtconnectivity-add-callback-attribute.patch"
+  cd ${_pkgfn/opensource-/}
+  apply_patch_with_msg \
+    0001-qtconnectivity-add-callback-attribute.patch \
+    0002-sdpscanner_fix_format_strings_for_u_int64_t.patch
 }
 
 build() {
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
 
-  qmake ../${_pkgfn}
+  qmake ../${_pkgfn/opensource-/}
 
   make
 }
@@ -66,7 +70,7 @@ package_qt5-connectivity() {
   make INSTALL_ROOT="${pkgdir}" install
 
   install -d "$pkgdir${MINGW_PREFIX}"/share/licenses/${_realname}
-  install -Dm644 $srcdir/${_pkgfn}/LICENSE* -t "$pkgdir${MINGW_PREFIX}"/share/licenses/${_realname}
+  install -Dm644 $srcdir/${_pkgfn/opensource-/}/LICENSE* -t "$pkgdir${MINGW_PREFIX}"/share/licenses/${_realname}
 
   # Seperate debug-info files
   mv -f "${pkgdir}${MINGW_PREFIX}/lib"/*.debug "${pkgdir}${MINGW_PREFIX}/bin"/ || true
