zed: update to 0.162.5

--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.161.2
+pkgver=0.162.5
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
@@ -34,21 +34,28 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
 options=('!lto')
 optdepends=("${MINGW_PACKAGE_PREFIX}-ollama: provides LLMs for assistance panel"
             "${MINGW_PACKAGE_PREFIX}-clang-tools-extra: for a better C/C++ language support"
-            "${MINGW_PACKAGE_PREFIX}-rust-analyzer: for a better Rust language support")
+            "${MINGW_PACKAGE_PREFIX}-rust-analyzer: for a better Rust language support"
+            "${MINGW_PACKAGE_PREFIX}-ruff: for 'Ruff' extension"
+            "${MINGW_PACKAGE_PREFIX}-mesonlsp: for 'Meson' extension")
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
         "zed-dont-vendor-cargo-about.patch"
-        "zstd-sys-remove-statik.patch")
-sha256sums=('8e12f3c7c55aecc8b9b04418c1d008075e4dd429682e3e271e07620e1431c020'
+        "zstd-sys-remove-statik.patch"
+        "zed-set-create-no-window.patch")
+sha256sums=('819778830489fbea7ff911e06b870e13d7794b36240c5c75807752a7e707eb22'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
-            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
+            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b'
+            'c27cc1246dd6711d3c41dac95406108bf9c932631ae46a9c34b10a943918dff9')
 
 prepare() {
   cd "${_realname}"
 
   rm rust-toolchain.toml
 
+  # set `CREATE_NO_WINDOW` for commands that shouldn't do so, partial backport of
+  # https://github.com/zed-industries/zed/commit/95ace0370672b4784821648887d57a95bf974291
+  patch -Np1 -i "../zed-set-create-no-window.patch"
   # use system cargo about to generate license file
   patch -Np1 -i "../zed-dont-vendor-cargo-about.patch"
   # link system deps dynamically
@@ -60,8 +67,9 @@ prepare() {
 zstd-sys = { path = "../zstd-sys-2.0.13+zstd.1.5.6" }
 END
 
-  # change git config so `pet*` crates would be fetched without error. requires registry changes,
-  # see https://github.com/zed-industries/zed/blob/main/docs/src/development/windows.md#build-fails-path-too-long
+  # change git config so `pet*` crates would be fetched without error. requires Windows registry
+  # changes, see
+  # https://github.com/zed-industries/zed/blob/main/docs/src/development/windows.md#build-fails-path-too-long
   # for details
   if test true != "$(git config core.longpaths)"; then
     git config --global core.longpaths true
