mesa: update to 24.3.0

--- a/mingw-w64-mesa/PKGBUILD
+++ b/mingw-w64-mesa/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=mesa
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=24.2.7
-pkgrel=3
+pkgver=24.3.0
+pkgrel=1
 pkgdesc="Open-source implementation of the OpenGL, Vulkan and OpenCL specifications (mingw-w64)"
 url="https://www.mesa3d.org/"
 msys2_repository_url="https://gitlab.freedesktop.org/mesa/mesa"
@@ -46,10 +46,12 @@ if [[ ${CARCH} != i686 ]]; then
               "${MINGW_PACKAGE_PREFIX}-vulkan-validation-layers: to debug applications using Vulkan graphics")
 fi
 source=(https://mesa.freedesktop.org/archive/${_realname}-${pkgver}.tar.xz{,.sig}
-        0000-addrlib-workaround-old-cpu-target.patch)
-sha256sums=('a0ce37228679647268a83b3652d859dcf23d6f6430d751489d4464f6de6459fd'
+        0000-addrlib-workaround-old-cpu-target.patch
+        0001-include-missing-header.patch)
+sha256sums=('97813fe65028ef21b4d4e54164563059e8408d8fee3489a2323468d198bf2efc'
             'SKIP'
-            '4e511b1ab380d0e7d1f152f89c82665e5ef7de96f26de1b5597aa1db85cfc5a4')
+            '4e511b1ab380d0e7d1f152f89c82665e5ef7de96f26de1b5597aa1db85cfc5a4'
+            '7ac84a5b34f7599d59c328e8936b2487f9b99d699630f16468c061dba8cf10ff')
 validpgpkeys=('8703B6700E7EE06D7A39B8D6EDAE37B02CEB490D') # Emil Velikov <emil.l.velikov@gmail.com>
 validpgpkeys+=('946D09B5E4C9845E63075FF1D961C596A7203456') # Andres Gomez <tanty@igalia.com>
 validpgpkeys+=('E3E8F480C52ADD73B278EE78E1ECBE07D7D70895') # Juan Antonio Suárez Romero (Igalia, S.L.) <jasuarez@igalia.com>"
@@ -84,7 +86,8 @@ prepare() {
   cd ${srcdir}/${_realname}-${pkgver}
 
   apply_patch_with_msg \
-    0000-addrlib-workaround-old-cpu-target.patch
+    0000-addrlib-workaround-old-cpu-target.patch \
+    0001-include-missing-header.patch
 
   # Tie clang clc linking mode to static-libclc instead of shared-llvm
   sed -e "s|_shared_llvm|false|g" \
