--- a/mingw-w64-directxmath/PKGBUILD
+++ b/mingw-w64-directxmath/PKGBUILD
@@ -4,9 +4,9 @@ _realname=directxmath
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 # Version from CMakeLists.txt
-pkgver=3.1.9
-_tag=feb2024
-pkgrel=2
+pkgver=3.20
+_tag=oct2024
+pkgrel=1
 pkgdesc="DirectXMath is an all inline SIMD C++ linear algebra library for use in games and graphics apps (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -18,22 +18,10 @@ license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("${_realname}-${_tag}.tar.gz"::"https://github.com/microsoft/DirectXMath/archive/refs/tags/${_tag}.tar.gz"
-        "0001-fix-pc-includedir.patch")
-sha256sums=('f78bb400dcbedd987f2876b2fb6fe12199d795cd6a912f965ef3a2141c78303d'
-            'e67b001b4c3de8085d413c1ee82c7e02a5f159a915314decd2f989cd273bd507')
-
-prepare() {
-  cd "${_realname}-${_tag}"
-
-  # https://github.com/microsoft/DirectXMath/pull/174#issuecomment-1978176271
-  patch -Np1 -i "${srcdir}/0001-fix-pc-includedir.patch"
-}
+source=("${_realname}-${_tag}.tar.gz"::"https://github.com/microsoft/DirectXMath/archive/refs/tags/${_tag}.tar.gz")
+sha256sums=('69af50e165e8458b0422068cff24dbdaf7d649c3174f140acbb71c39f3c93716')
 
 build() {
-  cd "${srcdir}/${_realname}-${_tag}"
-  mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
-
   declare -a extra_config
   if check_option "debug" "n"; then
     extra_config+=("-DCMAKE_BUILD_TYPE=Release")
@@ -42,19 +30,18 @@ build() {
   fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-    "${MINGW_PREFIX}"/bin/cmake.exe \
+    cmake \
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${extra_config[@]}" \
-      ../${_realname}-${_tag}
+      -S "${_realname}-${_tag}" \
+      -B "build-${MSYSTEM}"
 
-  "${MINGW_PREFIX}"/bin/cmake.exe --build .
+  cmake --build "build-${MSYSTEM}"
 }
 
 package() {
-  cd "${srcdir}/build-${MSYSTEM}"
-
-  DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install .
+  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}"
 
   install -Dm644 "${srcdir}/${_realname}-${_tag}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
