--- a/mingw-w64-libp11/PKGBUILD
+++ b/mingw-w64-libp11/PKGBUILD
@@ -16,8 +16,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-openssl")
 # optdepends("${MINGW_PACKAGE_PREFIX}-p11-kit: seamless PKCS#11 modules integration")
 _commit='214b271cdd066b40ad08e15ec3c19581c8dcd149'
 source=("${_realname}"::"git+https://github.com/OpenSC/libp11.git#commit=${_commit}"
+        0001-relocate-pkgconfig-install-paths.patch
         "engine_h_win32.patch" "verinfo.patch" "readme.msys2")
 sha256sums=('d563f146009ffa22ecba600dafdfdb309f228a102ec276b31c2786eb53adc7e7'
+            '2637e24bd085de10d1330a7df71ffa1d4d25265d55ce38f03788a8b641c614cc'
             '7e4a81e44543db66121ec3bd184f6677c961939a20911cc5d25018e38e56dc06'
             '73e9cf87aedf418e34a7dd41e221aaacbbf505d80a89dc7b36028a32b605f415'
             '73d7e42d25a6f109f089066e6e6c483471ab7b4f78e3401f9d3783a2fd151667')
@@ -32,21 +34,24 @@ prepare() {
   cd "${_realname}"
   patch -p1 -i ${srcdir}/engine_h_win32.patch
   patch -p1 -i ${srcdir}/verinfo.patch
+  patch -p1 -i ${srcdir}/0001-relocate-pkgconfig-install-paths.patch
 
   autoreconf -fi
 }
 
 build() {
   mkdir -p "build-${MSYSTEM}" && cd "build-${MSYSTEM}"
-  local ENGINESDIR=$(cygpath $(pkg-config --variable=enginesdir libcrypto))
+
+  MSYS2_ARG_CONV_EXCL="--define-variable=prefix=" \
   ../${_realname}/configure \
     --prefix="${MINGW_PREFIX}" \
     --build="${MINGW_CHOST}" \
     --host="${MINGW_CHOST}" \
     --target="${MINGW_CHOST}" \
-    --with-enginesdir="$ENGINESDIR" \
     --with-pkcs11-module=libp11-kit-0.dll # p11-kit lib/proxy module
-# FIXME: ls -l $(pkg-config.exe --variable=proxy_module p11-kit-1) # <= broken
+
+  # re with-pkcs11-module: pkg-config returns an absolute path, but we want
+  # things to be relocatable so hardcode the .dll name here
 
   make
 }
