libp11: fix pkgver

--- a/mingw-w64-libp11/PKGBUILD
+++ b/mingw-w64-libp11/PKGBUILD
@@ -1,7 +1,7 @@
 _realname=libp11
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=libp11.0.4.12.r103.g214b271
+pkgver=0.4.12.r103.g214b271
 pkgrel=1
 pkgdesc="A library implementing a small layer on top of the PKCS11 API (mingw-w64)"
 arch=('any')
@@ -27,7 +27,7 @@ sha256sums=('d563f146009ffa22ecba600dafdfdb309f228a102ec276b31c2786eb53adc7e7'
 pkgver() {
   cd "${_realname}"
 
-  git describe --long "${_commit}" | sed 's/\([^-]*-g\)/r\1/;s/-/./g;s/^v//g'
+  git describe --long "${_commit}" | sed 's/libp11-//g;s/\([^-]*-g\)/r\1/;s/-/./g;s/^v//g'
 }
 
 prepare() {
