godot-cpp: Update to 4.3

--- a/mingw-w64-godot-cpp/PKGBUILD
+++ b/mingw-w64-godot-cpp/PKGBUILD
@@ -3,17 +3,16 @@
 _realname=godot-cpp
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-pkgver=3.5.1
+pkgver=4.3
 pkgrel=1
 pkgdesc='C++ bindings for the Godot script API (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.godotengine.org/"
-license=('MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-godot_headers")
-makedepends=("${MINGW_PACKAGE_PREFIX}-scons")
+license=('spdx:MIT')
+makedepends=("${MINGW_PACKAGE_PREFIX}-scons" "${MINGW_PACKAGE_PREFIX}-cc")
 source=("https://github.com/godotengine/godot-cpp/archive/godot-${pkgver}-stable.tar.gz")
-sha256sums=('a0ab1f117d30ab01837e39e7ff704bbded282db4643343579b2bca11794f99fc')
+sha256sums=('e6dfe8ee1ab3eeaadc9dba2dcb5ef39c4a99635986148fa893ce5c414153743f')
 
 prepare() {
   rm -rf "${_realname}-${pkgver}"
@@ -22,23 +21,11 @@ prepare() {
 
 build() {
   cd "${_realname}-${pkgver}"
-  declare -a extra_config
-  if [ "$CARCH" = "x86_64" ]; then
-    extra_config+=("use_lto=yes")
-    extra_config+=("bits=64")
-  else
-    # lto is broken on 32bit
-    extra_config+=("use_lto=no")
-    extra_config+=("bits=32")
-  fi
 
   ${MINGW_PREFIX}/bin/scons ${MAKEFLAGS} \
     platform=windows \
-    target=release \
+    target=template_release \
     use_mingw=yes \
-	headers_dir=${MINGW_PREFIX}/include/godot \
-	custom_api_file=${MINGW_PREFIX}/share/godot/api.json \
-    "${extra_config[@]}" \
     generate_bindings=yes
 }
 
@@ -49,6 +36,6 @@ package() {
   cd include
   find . -type f -exec install -Dm644 {} "${pkgdir}${MINGW_PREFIX}/include/godot/"{} \;
   cd ..
-  install -D -m644 bin/libgodot-cpp.windows.release.*.a "${pkgdir}${MINGW_PREFIX}/lib/libgodot-cpp.a"
+  install -D -m644 bin/libgodot-cpp.windows.*.a "${pkgdir}${MINGW_PREFIX}/lib/libgodot-cpp.a"
   install -D -m644 LICENSE.md "${pkgdir}${MINGW_PREFIX}/share/licenses/godot-cpp/LICENSE.md"
 }
