fltk: enable versioned DLLs; rebuilds

--- a/mingw-w64-fltk/PKGBUILD
+++ b/mingw-w64-fltk/PKGBUILD
@@ -50,6 +50,7 @@ build() {
     -Wno-dev \
     -GNinja \
     -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
+    -DCMAKE_DLL_NAME_WITH_SOVERSION=ON \
     "${_extra_config[@]}" \
     -DFLTK_BUILD_TEST=OFF \
     -DFLTK_USE_SYSTEM_LIBJPEG=ON \
