fix mathgl and tigervnc api errors

--- a/mingw-w64-tigervnc/PKGBUILD
+++ b/mingw-w64-tigervnc/PKGBUILD
@@ -29,13 +29,16 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-libiconv"
              "${MINGW_PACKAGE_PREFIX}-gettext-tools")
 source=("https://github.com/TigerVNC/tigervnc/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "0001-fix-build-with-mingw-clang.patch")
+        "0001-fix-build-with-mingw-clang.patch"
+        "0002-fix-fullscreen-api-conflicts.patch")
 sha256sums=('579d0d04eb5b806d240e99a3c756b38936859e6f7db2f4af0d5656cc9a989d7c'
-            'c5fd1d26bfb7461e3f61fe233ac648fc4f7421319a604f5bf59d3c9900184579')
+            'c5fd1d26bfb7461e3f61fe233ac648fc4f7421319a604f5bf59d3c9900184579'
+            'fc112c1449ead798733c55c06b940b078f1cec5c2068872c5a5046fbde22e633')
 
 prepare() {
   cd ${_realname}-${pkgver}
   patch -p1 -i "${srcdir}"/0001-fix-build-with-mingw-clang.patch
+  patch -p1 -i "${srcdir}"/0002-fix-fullscreen-api-conflicts.patch
 }
 
 build() {
