--- a/mingw-w64-mathgl/PKGBUILD
+++ b/mingw-w64-mathgl/PKGBUILD
@@ -27,13 +27,16 @@ depends=("${MINGW_PACKAGE_PREFIX}-fltk"
          "${MINGW_PACKAGE_PREFIX}-zlib")
          #"${MINGW_PACKAGE_PREFIX}-wxWidgets"
 source=("https://downloads.sourceforge.net/${_realname}/${_realname}-${pkgver}.tar.gz"
-        "001-fix-cmake-files.patch")
+        "001-fix-cmake-files.patch"
+        "002-fix-NULL-ambigous-call.patch")
 sha256sums=('ca84bf9480c39ed3112e920c16ce3d8f2898698f62896f3a57714128622a55aa'
-            '27c6d40f04e3a10d40490c42fac6560a9f304bfbdba45614e7de6f830a8bb820')
+            '27c6d40f04e3a10d40490c42fac6560a9f304bfbdba45614e7de6f830a8bb820'
+            '293dc9a72143343c37f4ec9f465e0cc786e3506286cb188fdb899e4732c19a77')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
   patch -Np1 -i "${srcdir}/001-fix-cmake-files.patch"
+  patch -Np1 -i "${srcdir}/002-fix-NULL-ambigous-call.patch"
 }
 
 build() {
