bring back the uuid patch

--- a/mingw-w64-fltk/PKGBUILD
+++ b/mingw-w64-fltk/PKGBUILD
@@ -21,11 +21,14 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-gettext-tools"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("${_realname}-${pkgver}.tar.gz::https://github.com/${_realname}/${_realname}/archive/release-${pkgver}.tar.gz")
-sha256sums=('192a48adaa2060da506ba9961485097203f3461b2262b4bd760a25c068ae4af0')
+source=("${_realname}-${pkgver}.tar.gz::https://github.com/${_realname}/${_realname}/archive/release-${pkgver}.tar.gz"
+        "001-fltk-config-uuid-shared.patch")
+sha256sums=('192a48adaa2060da506ba9961485097203f3461b2262b4bd760a25c068ae4af0'
+            '30ea78d49d15dcc6cb567ab08d0c13f0ddcb1844dc9b22ebcd3bd80dd88f640e')
 
 prepare() {
   cd "${srcdir}/${_realname}-release-${pkgver}"
+  patch -p1 -i ${srcdir}/001-fltk-config-uuid-shared.patch
 }
 
 build() {
