--- a/mingw-w64-vk-bootstrap/PKGBUILD
+++ b/mingw-w64-vk-bootstrap/PKGBUILD
@@ -1,5 +1,4 @@
-# Maintainer: Sergey Popov <popov.sa@gmail.com>
-# Contributor: Mario Emmenlauer <memmenlauer@biodataanalysis.de>
+# Maintainer: Felix Xing (Felixaszx) <felixaszx@outlook.com>
 
 _realname=vk-bootstrap
 pkgbase="mingw-w64-${_realname}"
