--- a/mingw-w64-libssh2/PKGBUILD
+++ b/mingw-w64-libssh2/PKGBUILD
@@ -4,8 +4,8 @@ _realname=libssh2
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-wincng")
-pkgver=1.11.0
-pkgrel=2
+pkgver=1.11.1
+pkgrel=1
 pkgdesc="A library implementing the SSH2 protocol as defined by Internet Drafts (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -13,22 +13,20 @@ url="https://libssh2.org/"
 msys2_references=(
   'cpe: cpe:/a:libssh2:libssh2'
 )
-license=("BSD")
+msys2_repository_url='https://github.com/libssh2/libssh2'
+license=("spdx:BSD-3-Clause")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-openssl"
              "${MINGW_PACKAGE_PREFIX}-zlib")
-source=("https://libssh2.org/download/${_realname}-${pkgver}.tar.gz"{,.asc}
-        fix-pkgconfig.patch)
-sha256sums=('3736161e41e2693324deb38c26cfdc3efe6209d634ba4258db1cecff6a5ad461'
-            'SKIP'
-            '7a6545f6d457ad008aacefe04a60727c02d33927c8a903745bf191f69cc8ba55')
+source=("https://libssh2.org/download/${_realname}-${pkgver}.tar.gz"{,.asc})
+sha256sums=('d9ec76cbe34db98eec3539fe2c899d26b0c837cb3eb466a56b0f109cabf658f7'
+            'SKIP')
 validpgpkeys=('27EDEAF22F3ABCEB50DB9A125CC908FDB71E12C2'   # Daniel Stenberg
               '914C533DF9B2ADA2204F586D78E11C6B279D5C91')  # Daniel Stenberg (old key)
 
 prepare() {
   cd ${_realname}-${pkgver}
-  patch -p1 -i "${srcdir}/fix-pkgconfig.patch"
   autoreconf -fi
 }
 
