amqp-cpp: update to 4.3.27
Remove patch files which were addded in upstream.

002-fix-shared-linking.patch
https://github.com/CopernicaMarketingSoftware/AMQP-CPP/commit/2b17473cd62bf08a694155acb87d04fa3c346eb1

003-shared-lib-install.patch
https://github.com/CopernicaMarketingSoftware/AMQP-CPP/commit/bd1b3e5d46df2a48b1ca8321653d23051140cbbf

--- a/mingw-w64-amqp-cpp/PKGBUILD
+++ b/mingw-w64-amqp-cpp/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=amqp-cpp
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=4.3.26
+pkgver=4.3.27
 pkgrel=1
 pkgdesc="C++ library for asynchronous non-blocking communication with RabbitMQ (mingw-w64)"
 arch=('any')
@@ -15,19 +15,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 source=("${_realname}-${pkgver}.tar.gz"::https://github.com/CopernicaMarketingSoftware/AMQP-CPP/archive/v${pkgver}.tar.gz
-        001-cmake-install-config.patch
-        002-fix-shared-linking.patch
-        003-shared-lib-install.patch)
-sha256sums=('2baaab702f3fd9cce40563dc1e23f433cceee7ec3553bd529a98b1d3d7f7911c'
-            '236787a1151b097cf5584cbbdb9882c9a3507b87168a4671ea54690f3144ee33'
-            '23def70fa83a02613945df1c15446f67c66e6999113b97416d01e7c89c062b1c'
-            '54ef815fb5bda56812bbbdd98ec3108268e238f3eb2c9ccb74892d3059ce19ec')
+        001-cmake-install-config.patch)
+sha256sums=('af649ef8b14076325387e0a1d2d16dd8395ff3db75d79cc904eb6c179c1982fe'
+            '236787a1151b097cf5584cbbdb9882c9a3507b87168a4671ea54690f3144ee33')
 
 prepare() {
   cd  ${_realname}-${pkgver}
   patch -p1 -i ${srcdir}/001-cmake-install-config.patch
-  patch -p1 -i ${srcdir}/002-fix-shared-linking.patch
-  patch -p1 -i ${srcdir}/003-shared-lib-install.patch
 }
 
 build() {
