--- a/mingw-w64-calculix-ccx/PKGBUILD
+++ b/mingw-w64-calculix-ccx/PKGBUILD
@@ -3,48 +3,49 @@
 _realname=calculix-ccx
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.21
+pkgver=2.22
 pkgrel=1
 pkgdesc="CalculiX: 3D Structural Finite Element Program - Solver (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="http://www.calculix.de/"
 license=('spdx:GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-arpack"
          "${MINGW_PACKAGE_PREFIX}-arpack64"
+         "${MINGW_PACKAGE_PREFIX}-libwinpthread-git"
          "${MINGW_PACKAGE_PREFIX}-omp"
          "${MINGW_PACKAGE_PREFIX}-openblas"
          "${MINGW_PACKAGE_PREFIX}-openblas64"
-         "${MINGW_PACKAGE_PREFIX}-spooles"
          $([[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]] || echo "${MINGW_PACKAGE_PREFIX}-gcc-libgfortran"))
-makedepends=("${MINGW_PACKAGE_PREFIX}-fc")
+makedepends=("${MINGW_PACKAGE_PREFIX}-fc"
+             "${MINGW_PACKAGE_PREFIX}-spooles")
 source=("http://www.dhondt.de/ccx_${pkgver}.src.tar.bz2"
         "http://www.dhondt.de/gpl-2.0.txt"
         "ccx_mingw.patch"
         "ccx_ooc.patch")
-sha256sums=('52a20ef7216c6e2de75eae460539915640e3140ec4a2f631a9301e01eda605ad'
+sha256sums=('3a94dcc775a31f570229734b341d6b06301ebdc759863df901c8b9bf1854c0bc'
             '8177f97513213526df2cf6184d8ff986c675afb514d4e68a404010521b880643'
-            '64a9b4aae8910f1acd1d28b65e188134775670f9ada5d15614df38c9cda16c53'
+            'b9273f018257aeb1e99b23d0776d8b385f168cb22a9626778691d3d1405109f2'
             'dd81df3de137a05b45e39fe61830337e6405ec566148598dab2828a6d9780e8a')
 
 prepare() {
   cd "${srcdir}/CalculiX/ccx_${pkgver}/src"
-  patch -Np1 < ../../../ccx_mingw.patch
-  patch -Np1 < ../../../ccx_ooc.patch
+  patch -Np1 -i "${srcdir}"/ccx_mingw.patch
+  patch -Np1 -i "${srcdir}"/ccx_ooc.patch
 }
 
 build()
 {
   cd "${srcdir}/CalculiX/ccx_${pkgver}/src"
   if [[ ${MINGW_PACKAGE_PREFIX} != *-clang-* ]]; then
-    CFLAGS+=" -fopenmp"
+    CFLAGS+=" -fopenmp -Wno-incompatible-pointer-types"
     FC=gfortran
     export FFLAGS="-fallow-argument-mismatch -fopenmp -O2"
     export OMP_LIBS="-lgomp -lquadmath"
   else
     CFLAGS+=" -fopenmp -Wno-implicit-function-declaration"
     FC=flang
-    export FFLAGS="-O2"
+    export FFLAGS="-fopenmp -O2 -I${MINGW_PREFIX}/include"
     export OMP_LIBS="-lomp"
   fi
 
